--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section class="skills">
             <h2>Technical Skills</h2>
             <ul>
-                <li>Programming: Python(bsics),C (basics)</li>
+                <li>Programming: Python(basics),C (basics)</li>
                 <li>Operating Systems: Windows, Linux (basics)</li>
                 <li>Web Development: HTML,CSS</li>
                 <li>Statistics & Data Analysis</li>
